--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,23 @@
     <artifactId>uml-project</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
     <repositories>
         <repository>
             <id>eclipse</id>
             <url>https://repo.eclipse.org/content/groups/releases/</url>
         </repository>
+
+        <repository>
+                <id>eclipse-modeling</id>
+                <name>Eclipse UML2 Modeling Repo</name>
+                <url>https://repo.eclipse.org/content/repositories/modeling/</url>
+        </repository>
+
     </repositories>
 
     <dependencies>
@@ -21,34 +33,67 @@
         <dependency>
             <groupId>org.eclipse.uml2</groupId>
             <artifactId>org.eclipse.uml2.uml</artifactId>
-            <version>5.0.1.v20140910-1354</version>
+            <version>5.5.0</version>
+            <scope>system</scope>
+            <systemPath>E:/jar/org.eclipse.uml2.uml_5.5.0.v20210228-1829.jar</systemPath>
         </dependency>
 
         <!-- EMF Core -->
         <dependency>
             <groupId>org.eclipse.emf</groupId>
             <artifactId>org.eclipse.emf.ecore</artifactId>
-            <version>2.20.0</version>
+            <version>2.39.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.eclipse.emf</groupId>
             <artifactId>org.eclipse.emf.common</artifactId>
-            <version>2.20.0</version>
+            <version>2.42.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.eclipse.emf</groupId>
             <artifactId>org.eclipse.emf.ecore.xmi</artifactId>
-            <version>2.18.0</version>
+            <version>2.39.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.eclipse.uml2</groupId>
             <artifactId>org.eclipse.uml2.uml.resources</artifactId>
-            <version>5.0.1.v20140910-1354</version>
+            <version>5.5.0</version>
+            <scope>system</scope>
+            <systemPath>E:/jar/org.eclipse.uml2.uml.resources_5.5.0.v20210228-1829.jar</systemPath>
         </dependency>
 
+        <dependency>
+            <groupId>org.eclipse.uml2</groupId>
+            <artifactId>org.eclipse.uml2.common</artifactId>
+            <version>5.5.0</version>
+            <scope>system</scope>
+            <systemPath>E:/jar/org.eclipse.uml2.common_2.5.0.v20210228-1829.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.uml2</groupId>
+            <artifactId>org.eclipse.uml2.types</artifactId>
+            <version>5.5.0</version>
+            <scope>system</scope>
+            <systemPath>E:/jar/org.eclipse.uml2.types_2.5.0.v20210228-1829.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.uml2</groupId>
+            <artifactId>org.eclipse.uml2.uml.profile.standard</artifactId>
+            <version>5.5.0</version>
+            <scope>system</scope>
+            <systemPath>E:/jar/org.eclipse.uml2.uml.profile.standard_1.5.0.v20210228-1829.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.emf</groupId>
+            <artifactId>org.eclipse.emf.mapping.ecore2xml</artifactId>
+            <version>2.13.0</version>
+        </dependency>
     </dependencies>
 
 </project>
